test/sema/negative/subtyping1.impala
fn f(r: fn(double)->()) -> () {
   r(5)
}
